--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: black;
+  color: white;
+  line-height: 1.6;
 }
 
 .container {
-  background-color: black;
+  width: 100%;
+  overflow-x: hidden;
 }
 
-/* ============ Header ========== */
+/* ===== HEADER ===== */
 header {
   background-color: black;
-  color: white;
-  padding: 1% 2%;
-  /* border: 2px solid yellow; */
+  padding: 1% 5%;
 }
 
 .header {
@@ -25,236 +28,300 @@ header {
   align-items: center;
 }
 
-.main_menu {
+.main_logo {
   display: flex;
-  gap: 30px;
   align-items: center;
+  gap: 10px;
 }
 
-.menu ul {
+.logo {
+  width: 40px;
+}
+
+.logo_text {
+  font-family: "Vampiro One", Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.main_menu ul {
   display: flex;
   list-style: none;
-  gap: 15px;
+  gap: 25px;
 }
 
-.menu li {
-  font-size: 14px;
+.main_menu a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
-.main_logo{
-    /* background-color: red; */
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.logo{
-    width: auto;
-}
-.logo_text {
-  font-family: "Vampiro One", Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: 600;
-}
-a{
-    text-decoration: none;
-    /* cursor: pointer; */
-    color: white;
-}
-li:hover{
-    color: white;
-    text-decoration:underline  rgb(12, 154, 12);
-    text-decoration-thickness:2px;
-        
+.main_menu a:hover {
+  text-decoration: underline 2px #38E07B;
 }
 
-/* ====== BODY CODE ===== */
-.main_body{
-    color: white;
-   
+/* ===== HERO ===== */
+.body_content {
+  margin: 100px auto 70px auto;
+  text-align: center;
+  max-width: 700px;
 }
 
-
-
-.body_content{
-    margin-top: 150px;
-    background-color: black;
-    text-align: center;
-     margin-bottom: 90px;
-    /* padding-bottom: 50px; */
-    
-}
 h1 {
-    color: white;
-    font-weight: 600;
-    font-size: 3.5rem;
-    font-family:Arial, Helvetica, sans-serif;
-    
-}
-.txt_1{
-    /* color: rgb(68, 144, 68); */
-    color: #38E07B;
-    font-weight: 600;
-  
-    
-}
-.txt_2{
-    font-size: 16px;
-}
-.txt_order{
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 40px;
-
-}
-.txt_3{
-    width: 90px;
-    border-radius: 25px;
-    padding: 12px;
-    background-color: #38E07B;
-    color: black;
-    font-weight: bold;
-
-}
-.txt_4{
-    width: 90px;
-    border-radius: 25px;
-    padding: 12px;
-    background-color: rgb(55, 36, 36);
-    color: white;
-    font-weight: bold;
-
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
-/* == IMAGE BURGER== */
-
-.image_burger{
-    display: flex;
-    gap: 5px;
-
-    background-color: #111827;
-    /* background-color: yellow; */
-    padding-top: 100px;
-    
+.txt_1 {
+  color: #38E07B;
 }
 
-.txt_me{
-    display: block;
-    /* gap: 20px; */
-    padding: 30px;
-    margin: 30px;
-    /* background-color: red; */
-}
-.txt_5{
-    border-radius: 25px;
-    color: white;
-    font-weight: 900;
-    font-size: 2.5rem;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    
-
+.txt_2 {
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 
-
-.txt_6{
-width: 100%;
-font-size: 18px;
-text-align: justify;
-
+.txt_order {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
 }
 
-.im_burger{
-    margin: 0px 50px;
-    padding: 0px 100px ;
-    /* background-color: blue; */
-}
-.burger_logo{
-    width: 350px;
-    border: 2px solid red;
-    border-radius:25px;
-    /* text-align: right; */
+.txt_3,
+.txt_4 {
+  border-radius: 25px;
+  padding: 12px 20px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.txt_7{
-    width: 115px;
-    border-radius: 25px;
-    padding: 12px 14px;
-    /* padding-right: 12px; */
-    background-color: #38E07B;
-    color: black;
-    font-weight: bold;
-    margin-top: 20px;
-    
-
-}
-.txt_7:hover{
-    background-color: #86ebae;
-    cursor: pointer;
-    border: 2px solid white ;
-}
-.my_arrow{
-    font-size: 1.5em;
+.txt_3 {
+  background: #38E07B;
+  color: black;
 }
 
-
-/* === OUR DELICIOUS MENU === */
-.txt_del{
-    display: block;
-    /* justify-content: center; */
-    text-align: center;
-    font-size: 2.5rem;
-    background-color: #111827;
+.txt_3:hover {
+  background: #86ebae;
 }
 
-.list_imgs{
-    display: flex;
+.txt_4 {
+  background: #222;
+  color: white;
 }
 
-.main_img{
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    gap: 40px;
-    /* height: 100%;
-    max-height: 100%; */
-    background-color: #111827;
-
-
+/* ===== BURGER SECTION ===== */
+.image_burger {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
+  background: #111827;
 }
-.main_img_manu{
-    padding: 20px;
-    margin: 20px;
-    /* border: 12px solid red; */
-    /* border: 2px solid white; */
-    border-radius: 20px;
 
-
-
+.txt_me {
+  flex: 1;
+  min-width: 300px;
 }
-.main_img_1{
-    /* border: 2px solid white; */
-    border-radius: 20px 20px 0px 0;
 
+.txt_5 {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.txt_6 {
+  margin-top: 15px;
+  font-size: 16px;
+  text-align: justify;
+}
+
+.txt_7 {
+  margin-top: 20px;
+  border-radius: 25px;
+  padding: 12px 20px;
+  background: #38E07B;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+}
+
+.txt_7:hover {
+  background: #86ebae;
+}
+
+.im_burger {
+  flex: 1;
+  text-align: center;
+}
+
+.burger_logo {
+  width: 320px;
+  border-radius: 25px;
+}
+
+/* ===== MENU SECTION ===== */
+.txt_del {
+  text-align: center;
+  padding: 50px 20px 20px;
+  background: #111827;
+}
+
+.txt_del h1 {
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+}
+
+.list_imgs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background: #111827;
+  gap: 20px;
+  padding: 30px;
+}
+
+.main_img_manu {
+  background: #1F2937;
+  border-radius: 20px;
+  overflow: hidden;
+  max-width: 250px;
+}
+
+.main_img_1 {
+  width: 100%;
+  border-radius: 20px 20px 0 0;
 }
 
 .txt_8_msg {
-    background-color: #1F2937;
-    margin: 0px;
-    border: 0px solid;
-    border-radius: 0px 0px 20px 20px;    
+  padding: 15px;
 }
 
-.txt_8{
-    padding: 20px 2px 20px 0px;
-
+.txt_8 {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
-.txt_9{
-    padding: 0px 2px 20px 15px;
-    font-size: 16px;
-    margin: 0;
-    
 
+.txt_9 {
+  font-size: 14px;
 }
-/* .txt_flex{
-    display: block;
-} */
+
+/* ===== ABOUT ===== */
+.main_middle {
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.main_middle_img img {
+  max-width: 90%;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.check_txt {
+  max-width: 800px;
+  margin: auto;
+}
+
+.txt_10 {
+  text-align: justify;
+  font-size: 12px;
+  margin: 15px 0;
+}
+
+.txt_small{
+    text-align: right;
+    /* background-color: red; */
+}
+
+.txt_11 {
+  padding: 12px 20px;
+  background: #38E07B;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.txt_11:hover {
+  background: #86ebae;
+}
+
+/* ===== TESTIMONIALS ===== */
+.testimonials {
+  background: #111827;
+  text-align: center;
+  padding: 50px 20px;
+}
+
+.img_bottom {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.img_bottom_1 {
+  background: #1F2937;
+  padding: 20px;
+  border-radius: 20px;
+  max-width: 250px;
+  text-align: center;
+}
+
+.img_bottom_1_main {
+  width: 80px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+.img_bottom_1_txt {
+  color: #38E07B;
+  font-weight: bold;
+}
+
+/* ===== FOOTER ===== */
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background: #000;
+  padding: 40px 20px;
+  gap: 20px;
+}
+
+.foot_contact {
+  flex: 1;
+  min-width: 250px;
+}
+
+.foot_input {
+  flex: 1;
+  min-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.foot_input input,
+.foot_input textarea {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+.foot_input button {
+  padding: 12px;
+  background: #38E07B;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.foot_input button:hover {
+  background: #86ebae;
+}
